logs/.nfs0000000055422dbe0000a6c4
Traceback (most recent call last):
  File "/project/sajja/asami4/pac-math/scripts/run_full.py", line 8, in <module>
    import config
  File "/project/sajja/asami4/pac-math/config.py", line 46
    ]]
     ^
SyntaxError: unmatched ']'
Traceback (most recent call last):
  File "/project/sajja/asami4/pac-math/scripts/summarize_results.py", line 12, in <module>
    import config
  File "/project/sajja/asami4/pac-math/config.py", line 46
    ]]
     ^
SyntaxError: unmatched ']'
Traceback (most recent call last):
  File "/project/sajja/asami4/pac-math/scripts/diagnose_experiment.py", line 13, in <module>
    import config
  File "/project/sajja/asami4/pac-math/config.py", line 46
    ]]
     ^
SyntaxError: unmatched ']'
Traceback (most recent call last):
  File "/project/sajja/asami4/pac-math/scripts/audit_experiment.py", line 9, in <module>
    import config
  File "/project/sajja/asami4/pac-math/config.py", line 46
    ]]
     ^
SyntaxError: unmatched ']'
Traceback (most recent call last):
  File "/project/sajja/asami4/pac-math/scripts/export_main_tables.py", line 9, in <module>
    import config  # noqa: E402
  File "/project/sajja/asami4/pac-math/config.py", line 46
    ]]
     ^
SyntaxError: unmatched ']'
